crear libro hecho

--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Common/AuthorCard.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Common/AuthorCard.razor
@@ -19,7 +19,7 @@
 
     @if (ShowRemoveButton)
     {
-        <IconButton OnClick="TriggerOnRemove" TooltipText="Remover Autor" Class="mr-auto"  Small="@true">
+        <IconButton  OnClick="TriggerOnRemove" TooltipText="Remover Autor" Class="ml-auto hover:text-red-600"  Small="@true">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-minus-icon lucide-minus"><path d="M5 12h14"/></svg>        
             </IconButton>
     }
@@ -45,6 +45,7 @@
         if (firstRender)
         {
             RandomColor = RandomColorHelper.GetRandomColor();
+            StateHasChanged();
         }
     }
 
