--- a/BibliotecaUteco/BibliotecaUteco.Client/Pages/Books.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Pages/Books.razor
@@ -26,12 +26,12 @@
             
             </div>
 
-        <div class="flex w-full gap-2 items-center">
+        <div class="flex w-full gap-2 items-end">
             <LumexTextbox Type="@InputType.Search"
                             Label="Buscar libro"
                             Placeholder="Ej. Canción de hielo y fuego"
                             LabelPlacement="@LabelPlacement.Outside"
-                            Description="Usa los filtros de abajo para filtrar por libro o autor"/>
+                           />
             <LumexButton Size="Size.Small" Color="ThemeColor.Primary" >Buscar</LumexButton>
         </div>
         <div class="mb-3">
