--- a/BibliotecaUteco/BibliotecaUteco.Client/Pages/Index.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Pages/Index.razor
@@ -5,9 +5,7 @@
 <PageTitle>Index</PageTitle>
 
 <section class="w-full h-full flex max-md:flex-col  justify-center items-center  relative ">
-    <div class=" inset-0 z-0 w-[60%] max-md:w-full h-full opacity-40 bg-neutral-200"
-         style="background-size: 40px 40px;  background-image: repeating-linear-gradient(45deg, rgba(0, 0, 0, 0.1) 0, rgba(0, 0, 0, 0.1) 1px, transparent 1px, transparent 20px),  repeating-linear-gradient(-45deg, rgba(0, 0, 0, 0.1) 0, rgba(0, 0, 0, 0.1) 1px, transparent 1px, transparent 20px);">
-    </div>
+    <img class=" inset-0 z-0 w-[60%] max-md:w-full h-full object-cover" src="https://uteco.edu.do/wp-content/uploads/Biblioteca.jpg"/>
    
     <div class="flex flex-col h-full justify-center items-center z-10 w-[40%] p-[30px]  max-md:w-full border-l border-neutral-200 rounede-l-lg">
        <LoginForm/>
