--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Books/Common/BooksContainer.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Books/Common/BooksContainer.razor
@@ -1,11 +1,14 @@
-
+@implements  IDisposable
     
 <div class="grid max-sm:grid-cols-2 max-md:grid-cols-3 grid-cols-6 gap-7">
     <button  @onclick="ShowCreateBookForm" class="border-dotted border-[4px] border-green-600 aspect-[2/3] w-full rounded-xl hover:bg-green-100/30 transition-all flex flex-col justify-center items-center gap-2 cursor-pointer ">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide text-green-700 lucide-book-plus-icon lucide-book-plus"><path d="M12 7v6"/><path d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H19a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6.5a1 1 0 0 1 0-5H20"/><path d="M9 10h6"/></svg>
         <p class="text-xs text-green-700">Agregar Libro</p>
     </button>
-   
+   @foreach(var book in Books)
+   {
+        <BookCard Book="@book"/>
+   }
 
 </div>
 
@@ -14,9 +17,43 @@
     [Parameter]
     public EventCallback OnCreateBookButtonClicked {get; set;}
 
+    public GetBooksByFilterRequest GetBooksByFilterModel {get; set;} = new();
+    public List<BookResponse> Books { get; set; } = new();
+
 }
 
 @functions{
+
+    protected override async Task OnInitializedAsync(){
+
+        var result = await BooksApiServices.GetByFilterAsync(GetBooksByFilterModel);
+        if(result.Data is not null)
+        {
+            Books.AddRange(result.Data);
+        }
+
+        StateHasChanged();
+    }
+    protected override void OnInitialized()
+    {
+        RightBarContext.OnCreatedBookChanged += HandleBookCreated;
+    }
+
+    public void HandleBookCreated()
+    {
+        if (RightBarContext.CreatedBook is not null)
+        {
+            Books.Insert(0, RightBarContext.CreatedBook);
+            StateHasChanged();
+          
+        }
+    }
+
+    public void Dispose()
+    {
+        RightBarContext.OnCreatedBookChanged -= HandleBookCreated;
+
+    }
 
     public async Task TriggerOnCreateBookButtonClicked(){
 
