--- a/BibliotecaUteco/BibliotecaUteco.Client/Layouts/MainLayout.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Layouts/MainLayout.razor
@@ -12,8 +12,8 @@
     <SideBar OnSideBarExpandedChanged="(e)=> SideBarExpanded = e" SideBarExpanded="SideBarExpanded"/>
     <main class=@($"flex-1 ml-[250px] max-md:ml-[75px] {(RightBarContext.View != RightBarView.Default ? "mr-[300px] max-md:mr-[0px]" : "")}  {(!SideBarExpanded ? " !ml-[75px] " : "" )}")>
        
-        <nav class="w-full z-40 sticky top-0 py-2 px-4 items-center border-b border-neutral-300 h-[50px] gap-3 flex justify-end bg-neutral-100">
-            <h2 class="text-xl select-none font-semibold">Biblio<span class="underline decoration-green-600 decoration-2">Uteco</span></h2>
+        <nav class="w-full z-40 sticky top-0 py-2 px-4 items-center  h-[50px] gap-3 flex justify-end bg-green-700">
+            <h2 class="text-xl text-white select-none font-semibold">Biblio<span class="underline decoration-white decoration-2">Uteco</span></h2>
             <img class="size-[50px] aspect-square" src="https://akanuxt.uteco.edu.do/_nuxt/img/logo.f9c953e.svg" alt="uteco logo"/>
 
         </nav>
