--- a/BibliotecaUteco/BibliotecaUteco.Client/Layouts/SideBar.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Layouts/SideBar.razor
@@ -1,7 +1,7 @@
 
 
 
-<aside class=@($"fixed max-md:z-50 h-screen max-h-[100vh]  overflow-y-auto  h-full {(SideBarExpanded ? "w-[250px] " : "w-[75px]")} bg-white backdrop-blur-lg backdrop-opacity-90  flex flex-col items-center py-5 px-3 rounded-r-lg border border-neutral-300 gap-3")>
+<aside class=@($"fixed max-md:z-50 h-screen max-h-[100vh]  overflow-y-auto  h-full {(SideBarExpanded ? "w-[250px] " : "w-[75px]")} bg-green-700 backdrop-blur-lg backdrop-opacity-90  flex flex-col items-center py-5 px-3 !text-white gap-3")>
    
     
     <div class="flex gap-3 w-full items-center  justify-center">
@@ -29,7 +29,7 @@
        
 
         <IconButton OnClick="SwitchSideBarExpanded" TooltipText=@(SideBarExpanded ? "Colapsar barra" : "Epandir Barra") Class=@($"{(SideBarExpanded ? "ml-auto" : "")}")>
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" class="lucide text-inherit  lucide-list-collapse-icon lucide-list-collapse"><path d="M10 5h11"/><path d="M10 12h11"/><path d="M10 19h11"/><path d="m3 10 3-3-3-3"/><path d="m3 20 3-3-3-3"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" class="lucide text-white  lucide-list-collapse-icon lucide-list-collapse"><path d="M10 5h11"/><path d="M10 12h11"/><path d="M10 19h11"/><path d="m3 10 3-3-3-3"/><path d="m3 20 3-3-3-3"/></svg>
         </IconButton>
 
     </div>
@@ -40,27 +40,27 @@
             
             <SidebarSectionDivider Name="Bibliotecario y Admins" IsExpanded="SideBarExpanded"/>
             
-            <SideBarButton OnClick='()=>{NavManager.NavigateTo("/books");}'  Name="Libros" IsExpanded="SideBarExpanded">
-                <Icon>
+            <SideBarButton  OnClick='()=>{NavManager.NavigateTo("/books");}'  Name="Libros" IsExpanded="SideBarExpanded">
+                <Icon >
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-book-open-icon lucide-book-open"><path d="M12 7v14"/><path d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"/></svg>
                 </Icon>
             </SideBarButton>
            
             
 
-            <SideBarButton OnClick='()=>{NavManager.NavigateTo("/loans");}' Name="Préstamos" IsExpanded="SideBarExpanded">
+            <SideBarButton   OnClick='()=>{NavManager.NavigateTo("/loans");}' Name="Préstamos" IsExpanded="SideBarExpanded">
                 <Icon>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-handshake-icon lucide-handshake"><path d="m11 17 2 2a1 1 0 1 0 3-3"/><path d="m14 14 2.5 2.5a1 1 0 1 0 3-3l-3.88-3.88a3 3 0 0 0-4.24 0l-.88.88a1 1 0 1 1-3-3l2.81-2.81a5.79 5.79 0 0 1 7.06-.87l.47.28a2 2 0 0 0 1.42.25L21 4"/><path d="m21 3 1 11h-2"/><path d="M3 3 2 14l6.5 6.5a1 1 0 1 0 3-3"/><path d="M3 4h8"/></svg>
                     </Icon>
             </SideBarButton>
 
-            <SideBarButton Name="Penalizaciones" IsExpanded="SideBarExpanded">
+            <SideBarButton   Name="Penalizaciones" IsExpanded="SideBarExpanded">
                 <Icon>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-triangle-alert-icon lucide-triangle-alert"><path d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"/><path d="M12 9v4"/><path d="M12 17h.01"/></svg>
                 </Icon>
             </SideBarButton>
          
-            <SideBarButton Name="Lectores" IsExpanded="SideBarExpanded">
+            <SideBarButton   Name="Lectores" IsExpanded="SideBarExpanded">
                 <Icon>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-book-heart-icon lucide-book-heart"><path d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H19a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6.5a1 1 0 0 1 0-5H20"/><path d="M8.62 9.8A2.25 2.25 0 1 1 12 6.836a2.25 2.25 0 1 1 3.38 2.966l-2.626 2.856a.998.998 0 0 1-1.507 0z"/></svg>                   
                     </Icon>
@@ -72,12 +72,12 @@
             
             <SidebarSectionDivider Name="Administradores" IsExpanded="SideBarExpanded"/>
             
-            <SideBarButton Name="Transacciones" IsExpanded="SideBarExpanded">
+            <SideBarButton   Name="Transacciones" IsExpanded="SideBarExpanded">
                 <Icon>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right-left-icon lucide-arrow-right-left"><path d="m16 3 4 4-4 4"/><path d="M20 7H4"/><path d="m8 21-4-4 4-4"/><path d="M4 17h16"/></svg>                </Icon>
             </SideBarButton>
 
-            <SideBarButton Name="Usuarios" IsExpanded="SideBarExpanded">
+            <SideBarButton  Name="Usuarios" IsExpanded="SideBarExpanded">
                 <Icon>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-users-round-icon lucide-users-round"><path d="M18 21a8 8 0 0 0-16 0"/><circle cx="10" cy="8" r="5"/><path d="M22 20c0-3.37-2-6.5-4-8a5 5 0 0 0-.45-8.3"/></svg>                    
                     </Icon>
@@ -87,7 +87,7 @@
         </Authorized>
     </AuthorizeView>
     
-    <SideBarButton Name="Cerrar Sesión" OnClick="async ()=> {await LogoutAsync();}" IsExpanded="SideBarExpanded">
+    <SideBarButton   Name="Cerrar Sesión" OnClick="async ()=> {await LogoutAsync();}" IsExpanded="SideBarExpanded">
         <Icon>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out-icon lucide-log-out"><path d="m16 17 5-5-5-5"/><path d="M21 12H9"/><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/></svg>        
             </Icon>
