libros crear y obtener completo

--- a/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Forms/CreateAuthorForm.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/Components/Authors/Forms/CreateAuthorForm.razor
@@ -8,7 +8,7 @@
                       Label="Nombre del autor (completo)"
                       Placeholder="Ej. R. R. Tolkien"
                       
-                      LabelPlacement="@LabelPlacement.Outside"
+                      LabelPlacement="@LabelPlacement.Inside"
                       Required="true"
                       Disabled="_creatingAuthor"
                       Description="Los nombres que sean muy largos es recomendable reducirlos a iniciales"/>
