--- a/BibliotecaUteco/BibliotecaUteco/Components/App.razor
+++ b/BibliotecaUteco/BibliotecaUteco/Components/App.razor
@@ -18,8 +18,9 @@
 <body>
 <Routes @rendermode="@(new InteractiveWebAssemblyRenderMode(false))" />
 <script src="_content/LumexUI/js/LumexUI.js" type="module"></script>
-
+<script src="_content/BlazorAnimate/blazorAnimateInterop.js"></script>
 <script src="_framework/blazor.web.js"></script>
+
 
 <script>
     
