--- a/BibliotecaUteco/BibliotecaUteco.Client/_Imports.razor
+++ b/BibliotecaUteco/BibliotecaUteco.Client/_Imports.razor
@@ -40,9 +40,12 @@
 
 @using BibliotecaUteco.Client.Components.Genres.Skeletons
 @using BibliotecaUteco.Client.Components.Genres.Views
+@using BibliotecaUteco.Client.Components.Books.Skeletons
+
 @using BibliotecaUteco.Client.Requests.Genres.Queries
 @using BibliotecaUteco.Client.Requests.Books.Actions
 @using System.ComponentModel.DataAnnotations
+@using BlazorAnimate
 
 
 @using Microsoft.IdentityModel.JsonWebTokens
