--- a/BibliotecaUteco/BibliotecaUteco/wwwroot/dist.css
+++ b/BibliotecaUteco/BibliotecaUteco/wwwroot/dist.css
@@ -71,6 +71,7 @@
     --color-rose-700: oklch(51.4% 0.222 16.935);
     --color-rose-800: oklch(45.5% 0.188 13.697);
     --color-rose-900: oklch(41% 0.159 10.272);
+    --color-gray-900: oklch(21% 0.034 264.665);
     --color-zinc-50: oklch(98.5% 0 0);
     --color-zinc-100: oklch(96.7% 0.001 286.375);
     --color-zinc-200: oklch(92% 0.004 286.32);
@@ -415,6 +416,9 @@
   .collapse {
     visibility: collapse;
   }
+  .invisible {
+    visibility: hidden;
+  }
   .sr-only {
     position: absolute;
     width: 1px;
@@ -474,17 +478,32 @@
   .top-\[var\(--navbar-height\)\] {
     top: var(--navbar-height);
   }
+  .top-full {
+    top: 100%;
+  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
+  .right-4 {
+    right: calc(var(--spacing) * 4);
+  }
   .right-\[10\%\] {
     right: 10%;
+  }
+  .right-full {
+    right: 100%;
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
   .bottom-\[10\%\] {
     bottom: 10%;
+  }
+  .bottom-full {
+    bottom: 100%;
+  }
+  .left-0 {
+    left: calc(var(--spacing) * 0);
   }
   .left-1\/2 {
     left: calc(1/2 * 100%);
@@ -495,11 +514,17 @@
   .left-3 {
     left: calc(var(--spacing) * 3);
   }
+  .left-4 {
+    left: calc(var(--spacing) * 4);
+  }
   .left-\[10\%\] {
     left: 10%;
   }
   .left-\[37\.5\%\] {
     left: 37.5%;
+  }
+  .left-full {
+    left: 100%;
   }
   .z-0 {
     z-index: 0;
@@ -516,8 +541,14 @@
   .z-40 {
     z-index: 40;
   }
+  .z-50 {
+    z-index: 50;
+  }
   .z-\[-1\] {
     z-index: -1;
+  }
+  .z-\[999999\] {
+    z-index: 999999;
   }
   .-m-2 {
     margin: calc(var(--spacing) * -2);
@@ -543,6 +574,9 @@
   .me-auto {
     margin-inline-end: auto;
   }
+  .-mt-1 {
+    margin-top: calc(var(--spacing) * -1);
+  }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
@@ -555,6 +589,9 @@
   .mt-\[50px\] {
     margin-top: 50px;
   }
+  .-mr-1 {
+    margin-right: calc(var(--spacing) * -1);
+  }
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
   }
@@ -564,8 +601,14 @@
   .mr-auto {
     margin-right: auto;
   }
+  .-mb-1 {
+    margin-bottom: calc(var(--spacing) * -1);
+  }
   .mb-1\.5 {
     margin-bottom: calc(var(--spacing) * 1.5);
+  }
+  .mb-2 {
+    margin-bottom: calc(var(--spacing) * 2);
   }
   .mb-3 {
     margin-bottom: calc(var(--spacing) * 3);
@@ -582,8 +625,14 @@
   .\!ml-\[75px\] {
     margin-left: 75px !important;
   }
+  .-ml-1 {
+    margin-left: calc(var(--spacing) * -1);
+  }
   .ml-1 {
     margin-left: calc(var(--spacing) * 1);
+  }
+  .ml-2 {
+    margin-left: calc(var(--spacing) * 2);
   }
   .ml-\[250px\] {
     margin-left: 250px;
@@ -669,13 +718,17 @@
     width: calc(var(--spacing) * 12);
     height: calc(var(--spacing) * 12);
   }
+  .size-\[30px\] {
+    width: 30px;
+    height: 30px;
+  }
+  .size-\[40px\] {
+    width: 40px;
+    height: 40px;
+  }
   .size-\[50px\] {
     width: 50px;
     height: 50px;
-  }
-  .size-\[60px\] {
-    width: 60px;
-    height: 60px;
   }
   .size-\[120px\] {
     width: 120px;
@@ -737,6 +790,12 @@
   }
   .h-\[10px\] {
     height: 10px;
+  }
+  .h-\[20px\] {
+    height: 20px;
+  }
+  .h-\[30px\] {
+    height: 30px;
   }
   .h-\[50px\] {
     height: 50px;
@@ -957,6 +1016,9 @@
   .flex-1 {
     flex: 1;
   }
+  .\!shrink-0 {
+    flex-shrink: 0 !important;
+  }
   .flex-shrink-0 {
     flex-shrink: 0;
   }
@@ -1079,6 +1141,9 @@
   .grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
+  .grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
   .grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
   }
@@ -1138,9 +1203,6 @@
   }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
-  }
-  .gap-5 {
-    gap: calc(var(--spacing) * 5);
   }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
@@ -1219,14 +1281,6 @@
     border-top-left-radius: var(--lumex-radius-small);
     border-top-right-radius: var(--lumex-radius-small);
   }
-  .rounded-l-lg {
-    border-top-left-radius: var(--radius-lg);
-    border-bottom-left-radius: var(--radius-lg);
-  }
-  .rounded-r-lg {
-    border-top-right-radius: var(--radius-lg);
-    border-bottom-right-radius: var(--radius-lg);
-  }
   .rounded-b-large {
     border-bottom-right-radius: var(--lumex-radius-large);
     border-bottom-left-radius: var(--lumex-radius-large);
@@ -1252,6 +1306,14 @@
     border-width: 2px;
   }
   .border-3 {
+    border-style: var(--tw-border-style);
+    border-width: 3px;
+  }
+  .border-4 {
+    border-style: var(--tw-border-style);
+    border-width: 4px;
+  }
+  .border-\[3px\] {
     border-style: var(--tw-border-style);
     border-width: 3px;
   }
@@ -1377,8 +1439,14 @@
   .border-warning-300 {
     border-color: var(--lumex-warning-300);
   }
+  .border-t-gray-900 {
+    border-top-color: var(--color-gray-900);
+  }
   .border-t-transparent {
     border-top-color: transparent;
+  }
+  .border-r-gray-900 {
+    border-right-color: var(--color-gray-900);
   }
   .border-r-transparent {
     border-right-color: transparent;
@@ -1388,6 +1456,9 @@
   }
   .border-b-default {
     border-bottom-color: var(--lumex-default);
+  }
+  .border-b-gray-900 {
+    border-bottom-color: var(--color-gray-900);
   }
   .border-b-info {
     border-bottom-color: var(--lumex-info);
@@ -1403,6 +1474,9 @@
   }
   .border-b-warning {
     border-bottom-color: var(--lumex-warning);
+  }
+  .border-l-gray-900 {
+    border-left-color: var(--color-gray-900);
   }
   .border-l-transparent {
     border-left-color: transparent;
@@ -1497,17 +1571,38 @@
   .bg-foreground {
     background-color: var(--lumex-foreground);
   }
+  .bg-gray-900 {
+    background-color: var(--color-gray-900);
+  }
   .bg-green-100 {
     background-color: var(--color-green-100);
   }
-  .bg-green-200 {
-    background-color: var(--color-green-200);
-  }
-  .bg-green-400 {
-    background-color: var(--color-green-400);
+  .bg-green-100\/30 {
+    background-color: color-mix(in srgb, oklch(96.2% 0.044 156.743) 30%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-green-100) 30%, transparent);
+    }
   }
   .bg-green-700 {
     background-color: var(--color-green-700);
+  }
+  .bg-green-700\/50 {
+    background-color: color-mix(in srgb, oklch(52.7% 0.154 150.069) 50%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-green-700) 50%, transparent);
+    }
+  }
+  .bg-green-700\/80 {
+    background-color: color-mix(in srgb, oklch(52.7% 0.154 150.069) 80%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-green-700) 80%, transparent);
+    }
+  }
+  .bg-green-700\/90 {
+    background-color: color-mix(in srgb, oklch(52.7% 0.154 150.069) 90%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-green-700) 90%, transparent);
+    }
   }
   .bg-info {
     background-color: var(--lumex-info);
@@ -1544,6 +1639,9 @@
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-neutral-200) 50%, transparent);
     }
+  }
+  .bg-neutral-300 {
+    background-color: var(--color-neutral-300);
   }
   .bg-neutral-950 {
     background-color: var(--color-neutral-950);
@@ -1838,14 +1936,8 @@
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
   }
-  .text-\[0px\] {
-    font-size: 0px;
-  }
   .text-\[13px\] {
     font-size: 13px;
-  }
-  .text-\[15px\] {
-    font-size: 15px;
   }
   .text-\[16px\] {
     font-size: 16px;
@@ -1858,9 +1950,6 @@
   }
   .text-\[30px\] {
     font-size: 30px;
-  }
-  .text-\[50px\] {
-    font-size: 50px;
   }
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
@@ -1888,12 +1977,6 @@
   }
   .\!text-white {
     color: var(--color-white) !important;
-  }
-  .text-\[1\] {
-    color: 1;
-  }
-  .text-\[15\] {
-    color: 15;
   }
   .text-black {
     color: var(--color-black);
@@ -2027,17 +2110,8 @@
   .underline {
     text-decoration-line: underline;
   }
-  .decoration-green-600 {
-    text-decoration-color: var(--color-green-600);
-  }
   .decoration-green-700 {
     text-decoration-color: var(--color-green-700);
-  }
-  .decoration-white {
-    text-decoration-color: var(--color-white);
-  }
-  .decoration-2 {
-    text-decoration-thickness: 2px;
   }
   .underline-offset-4 {
     text-underline-offset: 4px;
@@ -2051,9 +2125,6 @@
   }
   .opacity-25 {
     opacity: 25%;
-  }
-  .opacity-40 {
-    opacity: 40%;
   }
   .opacity-60 {
     opacity: 60%;
@@ -2086,6 +2157,10 @@
   }
   .shadow-large {
     --tw-shadow: var(--lumex-shadow-large);
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-lg {
+    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-md {
@@ -2460,6 +2535,13 @@
       background-color: var(--lumex-default-100);
     }
   }
+  .group-hover\:visible {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        visibility: visible;
+      }
+    }
+  }
   .group-hover\:block {
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
@@ -2555,6 +2637,13 @@
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
         color: currentcolor;
+      }
+    }
+  }
+  .group-hover\:opacity-100 {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        opacity: 100%;
       }
     }
   }
@@ -4040,13 +4129,6 @@
       }
     }
   }
-  .hover\:bg-black {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-black);
-      }
-    }
-  }
   .hover\:bg-danger {
     &:hover {
       @media (hover: hover) {
@@ -4122,10 +4204,23 @@
       }
     }
   }
-  .hover\:bg-green-700 {
+  .hover\:bg-green-100\/60 {
     &:hover {
       @media (hover: hover) {
-        background-color: var(--color-green-700);
+        background-color: color-mix(in srgb, oklch(96.2% 0.044 156.743) 60%, transparent);
+        @supports (color: color-mix(in lab, red, red)) {
+          background-color: color-mix(in oklab, var(--color-green-100) 60%, transparent);
+        }
+      }
+    }
+  }
+  .hover\:bg-green-200\/70 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: color-mix(in srgb, oklch(92.5% 0.084 155.995) 70%, transparent);
+        @supports (color: color-mix(in lab, red, red)) {
+          background-color: color-mix(in oklab, var(--color-green-200) 70%, transparent);
+        }
       }
     }
   }
@@ -4272,13 +4367,6 @@
       }
     }
   }
-  .hover\:bg-transparent {
-    &:hover {
-      @media (hover: hover) {
-        background-color: transparent;
-      }
-    }
-  }
   .hover\:bg-warning {
     &:hover {
       @media (hover: hover) {
@@ -4310,13 +4398,6 @@
         @supports (color: color-mix(in lab, red, red)) {
           background-color: color-mix(in oklab, var(--lumex-warning) 20%, transparent);
         }
-      }
-    }
-  }
-  .hover\:bg-white {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-white);
       }
     }
   }
@@ -4369,13 +4450,6 @@
       }
     }
   }
-  .hover\:text-black {
-    &:hover {
-      @media (hover: hover) {
-        color: var(--color-black);
-      }
-    }
-  }
   .hover\:text-danger {
     &:hover {
       @media (hover: hover) {
@@ -4415,13 +4489,6 @@
     &:hover {
       @media (hover: hover) {
         color: var(--lumex-foreground-400);
-      }
-    }
-  }
-  .hover\:text-green-700 {
-    &:hover {
-      @media (hover: hover) {
-        color: var(--color-green-700);
       }
     }
   }
@@ -4471,13 +4538,6 @@
     &:hover {
       @media (hover: hover) {
         color: var(--color-red-600);
-      }
-    }
-  }
-  .hover\:text-red-700 {
-    &:hover {
-      @media (hover: hover) {
-        color: var(--color-red-700);
       }
     }
   }
